# go2-sdk

./: .gitignore  LICENSE  README.md
.github/workflows/: ci.yml  release.yml
go/: README.md  auth.go  client.go  errors.go  go.mod  go.sum  options.go
go/analytics/v1/: analytics.pb.go  analytics_grpc.pb.go
go/campaigns/v1/: campaigns.pb.go  campaigns_grpc.pb.go
go/domains/v1/: domains.pb.go  domains_grpc.pb.go
go/integrations/v1/: integrations.pb.go  integrations_grpc.pb.go
go/links/v1/: links.pb.go  links_grpc.pb.go
go/qr/v1/: qr.pb.go  qr_grpc.pb.go
proto/analytics/v1/: analytics.proto
proto/campaigns/v1/: campaigns.proto
proto/links/v1/: links.proto
python/: README.md  pyproject.toml
python/go2_sdk/: __init__.py  client.py  errors.py
scripts/: generate-all.sh  generate-go.sh  generate-python.sh  generate-typescript.sh
typescript/: README.md  package-lock.json  package.json  tsconfig.json
typescript/proto/analytics/v1/: analytics.proto
typescript/proto/domains/v1/: domains.proto
typescript/proto/integrations/v1/: integrations.proto
typescript/proto/qr/v1/: qr.proto
typescript/src/: analytics.ts  campaigns.ts  client.ts  domains.ts  errors.ts  index.ts  integrations.ts  links.ts  qr.ts  types.ts
